@@ -4,6 +4,9 @@
 	  tls-service-key, tls-service-pem, stub-tls-upstream and
 	  forward-tls-upstream.
 	- Fix #3397: Fix that cachedb could return a partial CNAME chain.
+	- Fix #3397: Fix that when the cache contains an unsigned DNAME in
+	  the middle of a cname chain, a result without the DNAME could
+	  be returned.
 
 19 January 2018: Wouter
 	- tag 1.6.8 for release with CVE fix.
